# IntPhys2

./: .gitignore  pyproject.toml
prediction_evals/app/: main.py  main_distributed.py
prediction_evals/app/videomaev2/modelcustom/: default_wrapper.py
prediction_evals/app/vjepa/: transforms.py  utils.py
prediction_evals/app/vjepa/modelcustom/: default_wrapper.py
prediction_evals/app/vjepa/models/: vision_transformer.py
prediction_evals/evals/: evaluator.py  main.py  main_distributed.py  scaffold.py
prediction_evals/evals/intphys2/: data_manager.py  eval.py
prediction_evals/evals/intphys2/configs/: vjepa_2.yaml  vjepa_rope.yaml
prediction_evals/src/datasets/utils/: dataloader.py  utils.py  weighted_sampler.py  worker_init_fn.py
prediction_evals/src/datasets/utils/video/: transforms.py  transforms_builder.py
prediction_evals/src/models/: attentive_pooler.py  predictor.py
prediction_evals/src/models/utils/: modules.py
prediction_evals/src/utils/: cluster.py  distributed.py  model.py  profiler.py
prediction_evals/src/utils/cluster_processor/: _cluster_processor.py  _local_file_dataset.py
